1.0.25 (Build xxxxx)
- Set default page size to 50

1.0.24 (Build 2022062700)
- Fixed issue with grades with decimals not working
- removed not working group selector from grade submissions page

1.0.23 (Build 2022060500)
- Added a better free trial link
- Rebuild JS for earlier versions of Moodle (<M3.8)

1.0.22 (Build 2022021800)
- fixed an issue with transcripts that come back late

1.0.21 (Build 2021122200)
- added credential fetching

1.0.20 (Build 2021120300)
- Added Japanese explanations
- Added proper titles on myattempts report
- Tweaked uploading message, so its not confusing
- Added a recorder skin setting

1.0.19 (Build 2021111100)
- fixed lots of issues

1.0.18 (Build 2021092500)
- fixed issue in restore of attempts
- fixed issue of array_key_exists on php 8
- added media and iframe to topics
- added grouping to grades and reports
- fixed issues with turn markup in chat-style display
- fixed issue with rubric grading reloading page


Version 1.0.17 (Build 2021030100)
- Changed default language to English
- Improved differencing
- Added a setup tab

Version 1.0.15 (2020082500)
-added custom completion rule
-added lots of grading changes

Version 1.0.15 (Build 2020061600)
-unreleased. fix for tether in M3.9

Version 1.0.14 (Build 2020032800)
-added poodllloader.html which safari needs
-removed function pchat_cron
-added instant transcription from AWS
-added detection for leaving transcript editor while last line still in edit mode

Version 1.0.13 (Build 2020022800)
-removed unnecessary references to ReadAloud module

Version 1.0.12 (Build 2020012500)
- Added user tagging
- Added several languages

Version 1.0.11 (Build 2019120900)
-added better reporting of invalid API creds to user
-Optimisations of cron task
-Added an audio player and a view button to attempt reports
-Changed activity button labels
-fixed issue if student did not choose a speaking partner
-fixed issue with timelimit not applying in some cases


Version 1.0.10 (Build 2019102800)