@@ -1,5 +1,7 @@
 1.0.25 (Build xxxxx)
 - Set default page size to 50
+- Requireselfreview was added to wrong table in install.xml
+- added check for empty turn on countwords
 
 1.0.24 (Build 2022062700)
 - Fixed issue with grades with decimals not working
